# trent_rules

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS_INDEX.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_SETUP.md  GEMINI.md  LICENSE  README.md  SKILLS_INDEX.md  agents.md  mcp.txt  potential_changes.md  pyproject.toml  requirements.txt  windows_dynamic_links.bat
.architecture/: CURSOR.md  PLATFORM_ARCHITECTURE.md  README.md
.claude/: CLAUDE.md  hooks.json  settings.local.json
.cursor/: hooks.json  mcp.json
.platform_architecture/: PLATFORM_ARCHITECTURE.md  PLATFORM_COMPARISON.md
.platforms/: CHANGELOG.md  CRAWL_STATUS.json  README.md
.trent/: BUGS.md  IDEA_BOARD.md  PLATFORM_ARCHITECTURE.md  PRD.md  PROJECT_CONTEXT.md  TASKS.md
.trent_template/: CURSOR.md
docker/: .env.example  Dockerfile  README.md  backup-docker.ps1  docker-compose.yml  pyproject.toml  requirements.txt
docs/: 20260127_173500_Cursor_TRENT_CODE_REVIEW.md  20260127_180000_Cursor_FIXES_APPLIED.md  20260128_121237_Claude_SWOT_DETAILED_ANALYSIS.md  20260129_190000_Cursor_CLAUDE_CODE_CLEANUP_PLAN.md  20260221_155953_Cursor_SWOT_TRENT_INSTALLED_TEMPLATE.md  20260221_155953_Cursor_SWOT_TRENT_TASK_MANAGEMENT.md  MIGRATION_V1_TO_V2.md
mcps/trent_docker/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
mcps/trent_docker/init_db/: 01_extensions.sql  README.md
mcps/trent_docker/templates/: CLAUDE.md  README.md
mcps/trent_docker/templates/.cursor/rules/: 10_trent_core.mdc  15_trent_agents_multi.mdc
mcps/trent_docker/templates_full/: HOOKS_INDEX.md  README.md  RULES_INDEX.md
mcps/trent_docker/templates_full/.cursor/agents/: accounting-finance-specialist.md  portainer-specialist.md
mcps/trent_docker/templates_full/.cursor/commands/: trent-setup.md
mcps/trent_docker/templates_full/.cursor/rules/: 17_trent_project_files.mdc  41_rag_knowledge_base.mdc  60_product_development.mdc
mcps/trent_docker/templates_full/.cursor/skills/automatic-rag-checking/: SKILL.md
mcps/trent_docker/templates_full/.cursor/skills/computer-use-agent/: rules.md
mcps/trent_docker/templates_full/.cursor/skills/computer-use-agent/reference/: safety_guidelines.md
mcps/trent_docker/templates_full/.cursor/skills/hanx-database-tools/: README.md
mcps/trent_docker/templates_full/.cursor/skills/hanx-knowledge-base/examples/: batch_ingestion.md
mcps/trent_docker/templates_full/.cursor/skills/hanx-knowledge-base/scripts/: search_kb.py
mcps/trent_docker/templates_full/.cursor/skills/hanx-mediawiki/examples/: team_wiki_examples.md
mcps/trent_docker/trent/: plugin_loader.py  server.py  subjects.py
mcps/trent_docker/trent/database/: client.py  schema.sql
mcps/trent_docker/trent/tools/: __init__.py
mcps/trent_docker/trent/tools/plugins/: install_trent.py  install_trent_full.py  mediawiki_page.py  rag_list_sources.py  rag_stats.py
portable-db-explorer/: README.md
template/: .mcp.json  NOTICE  (+2 more)
(+2042 files in other folders)
