[project]
name = "trent_rules"
version = "1.1.0"
description = "AI development framework with task management for Cursor IDE & Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "FS Trent" }
]
keywords = ["ai", "cursor", "task-management", "mcp", "development"]

dependencies = [
    # ============================================================================
    # AI & LLM APIs
    # ============================================================================
    "openai>=1.12.0",
    "anthropic>=0.40.0",
    "tiktoken>=0.6.0",
    "python-dotenv>=1.0.0",
    
    # ============================================================================
    # Data Processing & Utilities
    # ============================================================================
    "requests>=2.31.0",
    "pydantic>=2.6.1",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "black>=24.2.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

# Optional: Text chunking for advanced RAG workflows
chunking = [
    "langchain>=0.1.9",
    "langchain-text-splitters>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".cursor", ".trent", "template"]

[tool.hatch.build.targets.sdist]
include = [
    ".cursor/",
    ".trent/",
    "template/",
    "agents.md",
    "README.md",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
